--- a/Practicas/ejercicio18/pom.xml
+++ b/Practicas/ejercicio18/pom.xml
@@ -46,6 +46,11 @@
       <version>5.7.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>ar.edu.unlp.objetos.uno</groupId>
+    	<artifactId>ejercicio14</artifactId>
+    	<version>0.0.1-SNAPSHOT</version>
+    </dependency>
   </dependencies>
   
   <scm>
